# xg

./: CMakeLists.txt  LICENSE  README.md  TODO
include/xg/: axis.hpp  bbox.hpp  brush.hpp  canvas.hpp  color.hpp  context.hpp  drawable.hpp  font.hpp  glyph.hpp  image.hpp  label.hpp  legend.hpp  line_plot.hpp  path.hpp  pen.hpp  plot.hpp  rectangle.hpp  subplot.hpp  svg_document.hpp  text_layout.hpp  tics.hpp  vector.hpp  xform.hpp
include/xg/backends/cairo/: canvas.hpp
include/xg/util/: base64.hpp  dictionary.hpp  strings.hpp  variant.hpp
src/: CMakeLists.txt  canvas.cpp  color.cpp  image.cpp  path.cpp  pen.cpp  text_layout.cpp
src/backends/cairo/: canvas.cpp  font_manager.cpp  font_manager.hpp  scrptrun.cpp  scrptrun.h  text_layout.cpp  text_layout.hpp  text_layout_engine.cpp  text_layout_engine.hpp  text_path.cpp
src/svg/: svg_document.cpp  svg_dom.cpp  svg_dom.hpp  svg_dom_attributes.hpp  svg_dom_exceptions.hpp  svg_href_resolver.hpp  svg_length.cpp  svg_length.hpp  svg_parse_util.cpp  svg_parse_util.hpp  svg_parser.cpp  svg_parser.hpp  svg_render_context.cpp  svg_render_context.hpp  svg_style.cpp  svg_style.hpp  svg_style_attributes.hpp
src/util/: base64.cpp  dictionary.cpp  strings.cpp
test/: CMakeLists.txt  test_mask.cpp  test_pattern.cpp  test_plot.cpp  test_shapes.cpp  test_svg_parser.cpp  test_text_layout.cpp
