PROJECT(xg)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake/ ${CMAKE_ROOT}/Modules/   )

FIND_PACKAGE(Eigen3 REQUIRED)

# Boost
FIND_PACKAGE(Boost 1.49 REQUIRED COMPONENTS 
        regex filesystem system coroutine context program_options thread locale )

FIND_PACKAGE(Cairo REQUIRED)
FIND_PACKAGE(Fontconfig REQUIRED)
FIND_PACKAGE(Freetype REQUIRED)
FIND_PACKAGE(HarfBuzz REQUIRED)


INCLUDE_DIRECTORIES(
        include
        ${EIGEN3_INCLUDE_DIR}
        ${CAIRO_INCLUDE_DIRS}
        ${FREETYPE_INCLUDE_DIRS}
        ${FONTCONFIG_INCLUDE_DIR}
        ${Boost_INCLUDE_DIR}
)

ADD_DEFINITIONS( -std=c++11 )

SET (SRC_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET (INCLUDE_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/include/xg)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)


