PROJECT(xg)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake/ ${CMAKE_ROOT}/Modules/   )

FIND_PACKAGE(Cairo REQUIRED)
FIND_PACKAGE(Fontconfig REQUIRED)
FIND_PACKAGE(Freetype REQUIRED)
FIND_PACKAGE(HarfBuzz REQUIRED)
FIND_PACKAGE(ICU REQUIRED)
FIND_PACKAGE(EXPAT REQUIRED)

FIND_PACKAGE(Qt5 COMPONENTS Core Widgets Network Xml REQUIRED)

INCLUDE_DIRECTORIES(
        include
        ${EIGEN3_INCLUDE_DIR}
        ${CAIRO_INCLUDE_DIRS}
        ${FREETYPE_INCLUDE_DIRS}
        ${FONTCONFIG_INCLUDE_DIR}
        ${EXPAT_INCLUDE_DIRS}
)

ADD_DEFINITIONS( -std=c++11 )

SET (SRC_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET (INCLUDE_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/include/xg)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)


